# rusty_embeddings

./: Cargo.toml
src/: layers.rs  lib.rs  main.rs  models.rs
src/backend_core/: Cargo.toml
src/backend_core/src/: lib.rs
src/layers/: cublaslt.rs  layer_norm.rs  linear.rs
src/models/: bert.rs  roberta.rs
