[package]
name = "rust_embeddings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
candle-core = { version = "0.3.1", features = ["cuda"], git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
clap = "4.4.8"
hf-hub = "0.3.2"
lazy_static = "1.4.0"
serde = "1.0.193"
serde_json = "1.0.108"
tokenizers = "0.15.0"
tracing = "0.1.40"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"
backend-core = { path = "src/backend_core" }
thiserror = "1.0.50"

