[package]
name = "backend-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "^1.0"
clap = { version = "4.1.4", features = ["derive"], optional = true }

[features]
clap = ["dep:clap"]